# cpplox

./: .gitignore  CMakeLists.txt  README.md
examples/: break.lox  break_error_2.lox  class_2.lox  class_3.lox  ctor_1.lox  if_1.lox  recursion.lox  scope_test.lox  thrice.lox  unused.lox  while_1.lox
src/: ast.h  astprinter.cpp  astprinter.h  environment.cpp  environment.h  expressions.h  interpreter.cpp  interpreter.h  lox.cpp  lox.h  loxclass.cpp  loxclass.h  loxfunction.cpp  loxfunction.h  loxinstance.cpp  loxinstance.h  main.cpp  parser.cpp  parser.h  resolver.cpp  resolver.h  scanner.cpp  scanner.h  statements.h  string_utils.cpp  string_utils.h  token.cpp  token.h  token_type.cpp  token_type.h  types.cpp  types.h  utils.h
src/native_functions/: clock.cpp  clock.h
test/: test.cpp
